# WaveScript

./: .gitignore  .gitmodules  .jenkins_script.sh  .run_benchmarks.sh  INSTALL  Makefile  README  README.md  bin  compiler.ss  cur.tgz  demos  download_3rdparty  download_precompiled_binaries  download_stuff  install_environment_vars  run_benchmarks.hs  svn-up-good  switch_to_stable_revision
benchmarks/: .run_benchmarks.sh  Makefile  README  TODO  array_alloc.ws  compare.ss  compile.ss  countup.raw  gather_results.ss  measure-shell.ss  measure.ss  normalize_timings.ss  perfreport.tex  run_benchmarks.cabal  run_benchmarks.hs  running.ss  setup_engines.sh  shared.gp  shared.sh  standard_plot.gp
benchmarks/alloc/: Makefile  README.txt  datapass_allocarrays.ws  datapass_nestedarrays.ws  manual_best.c  manual_zct.c  plot.gp  run_datapass.sh  static_ideal.c
benchmarks/appbench/: Makefile  bgsub3.bench  bgsub4.bench  marmot1.bench  marmot2.bench  marmot3.bench  marmot_all.bench  mfcc1.bench  plot.gp  runall.sh
benchmarks/appbenchs/: Makefile  plot.gp  runall.sh
benchmarks/compile_stats/: Makefile  all-files.ss  alloc_sites.gp  measure_alloc_sites.ss  refcount_opportunities.ss  refcounts.gp  refcounts_heapratio.gp
benchmarks/datareps/: Makefile  graph_results.ss  plot.gp  plot_fold.gp  plotall.sh  profile_data_reps.ss  tabulate_results.ss
benchmarks/fft/: FFT2.str  Makefile  fft2.ws  fft2_arrays.ws
benchmarks/garbage_collection/: gc_kernels.ws  tests.ws
benchmarks/language_shootout/: Makefile  README  fannkuch.ml  fannkuch2.ws  fannkuch_incomplete.ws  fasta.ws  (+8 more)
(+2575 files in other folders)
