name:                WaveScript-benchmarks
version:             0.1.0.0
author:              Josh Cox, Michael DeWitt, Joel Svensson, Ryan Newton
maintainer:          rrnewton@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable run_benchmarks.exe
  main-is:             run_benchmarks.hs
  other-extensions:    CPP, BangPatterns, DeriveGeneric
  build-depends:       base >=4.6,
                       deepseq >=1.3,
                       time >=1.4, 
                       containers >=0.5,
                       process >= 1.1,
                       directory,
                       random >=1.0 && <1.1, 
                       mtl >=2.1,
                       data-default,
                       GenericPretty >=1.2 && <1.3, 
                       test-framework >=0.8 && <0.9, 
                       test-framework-hunit >=0.3 && <0.4,
                       HUnit >=1.2 && <1.3,
                       hsbencher >= 1.15,
                       hsbencher-fusion,
                       bytestring,
                       filepath
  default-language:    Haskell2010
  ghc-options: -threaded
